--- a/src/scss/login.scss
+++ b/src/scss/login.scss
@@ -20,6 +20,7 @@
 }
 
 .login__form {
+    position: relative;
     background-color: $white;
     padding: 65px 50px;
     border-radius: 5px;
@@ -78,4 +79,14 @@
     font-size: 16px;
     padding: 10px 30px;
     border-radius: 5px;
+}
+
+.pending {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 20px;
+    color: red;
+    width: 100%;
+    text-align: center;
 }
