--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -14,13 +14,20 @@
 }
 
 .menu__item {
-    background: none;
-    border: none;
-    transition: .3s;
-    padding: 10px 20px;
-    border-radius: 5px;
-    &:hover {
-        background-color: rgba(0, 0, 0, 0.08);
+    display: inline-block;
+
+    a {
+        color: #000000;
+        text-decoration: none;
+        display: block;
+        background: none;
+        border: none;
+        transition: .3s;
+        padding: 10px 20px;
+        border-radius: 5px;
+
+        &:hover {
+            background-color: rgba(0, 0, 0, 0.08);
+        }
     }
-    
 }
