--- a/src/scss/login.scss
+++ b/src/scss/login.scss
@@ -79,6 +79,9 @@
     font-size: 16px;
     padding: 10px 30px;
     border-radius: 5px;
+    text-decoration: none;
+    color: $black;
+    text-align: center;
 }
 
 .pending {
