--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -7,6 +7,8 @@
 @import 'layout/base';
 
 //components {
-@import 'login';
-@import 'header';
-@import 'map';
+@import 'components/Header';
+@import 'components/Login';
+@import 'components/Map';
+
+@import 'other';
