--- a/src/scss/components/Map.scss
+++ b/src/scss/components/Map.scss
@@ -9,21 +9,24 @@
 
 .map__panel {
   position: relative;
-  width: 40%;
+  width: 30%;
   background-color: $white;
   box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
   0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
   border-radius: 5px;
   padding: 45px 60px;
-  margin-top: 50px;
   z-index: 10000;
+  margin: 50px;
+
   .form__btn {
     margin: 0 auto;
     margin-top: 30px;
+
     &:disabled {
       background-color: $disabled;
       pointer-events: none;
       color: $disabled-text;
+
       &:hover {
         box-shadow: none;
       }
@@ -31,15 +34,20 @@
   }
 }
 
-.panel__subtext {
-  margin: 20px 0;
+.mapboxgl-control-container {
+  display: none !important;
 }
 
-.address__input {
-  width: 100%;
-  margin: 30px 0;
+@media screen and (max-width: $middle) {
+  .map__panel {
+    width: 50%;
+  }
 }
 
-.address__group {
-  padding: 0;
+@media screen and (max-width: $tablets) {
+  .map__panel {
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
 }
