--- a/src/scss/layout/base.scss
+++ b/src/scss/layout/base.scss
@@ -43,3 +43,12 @@ p {
     margin: 0;
     padding: 0;
 }
+
+a {
+    color: #1976d2;
+    text-decoration: none;
+
+    &:hover {
+        text-decoration: underline;
+    }
+}
