--- a/src/scss/other.scss
+++ b/src/scss/other.scss
@@ -100,10 +100,11 @@
 
 .form__panel {
   flex: 0 0 48%;
-  box-shadow: 0px 6px 20px 0px rgba(0, 0, 0, 0.15);
-  border-radius: 10px;
+  box-shadow: 0px 3px 3px -2px rgba(0,0,0,0.2), 0px 3px 4px 0px rgba(0,0,0,0.14), 0px 1px 8px 0px rgba(0,0,0,0.12);
   padding: 35px 30px 30px 30px;
   position: relative;
+  border-radius: 4px;
+
   .input__group {
     margin-top: 35px;
 
@@ -172,4 +173,16 @@
 
 .address__group {
   padding: 0;
+}
+
+.error {
+  color: red;
+  text-align: center;
+  padding: 20px 0;
+}
+
+.mc-logo {
+  position: absolute;
+  top: 15px;
+  right: 15px;
 }
